# spring-2026-final-project-team_025

./: .gitignore  M1_README.md  MEMORY_ENGINE_README.md  README.md  pyproject.toml  report.qmd  requirements-memory-engine.txt
career_engine/: __init__.py  extraction_agent.py  graph.py  groq_reranker.py  onet.py  run_pipeline.py  schema.py
data/: career_dialogues_380.json
demo/: .env.example  README.md  app.py  requirements.txt
demo/static/: index.html
docs/: architecture_update.md  risks_and_mitigations.md  setup.md
evaluation/: README.md  career_eval_extraction.py  career_judge_llm.py  eval_extraction.py  eval_noise_robustness.py  eval_retrieval.py  eval_self_consistency.py  gold_extraction_hand_labeled.json  gold_extraction_multiturn.json  gold_retrieval_hand_labeled.json  gold_retrieval_multiturn.json  gold_retrieval_sample.json  judge_llm.py  run_full_eval.py
evaluation/archive/: README.md  gold_extraction_auto.json  gold_extraction_auto_large.json  gold_extraction_clean.json  gold_extraction_enriched.json  gold_extraction_sample.json  gold_retrieval_sample_rich.json
memory_engine/: __init__.py  data_pipeline.py  extraction_agent.py  graph_memory.py  response_builder.py  retrieval.py  run_pipeline.py
outputs/career/: career_evaluation_summary.md  career_extraction_eval.json  career_extractions.json  career_gap_analysis.json  career_graph_memory.json  career_graph_stats.json  career_judge_scores_openai_gpt4o.json  career_judge_summary_openai_gpt4o.json  career_occupation_profiles.json  career_onet_mappings.json  career_pipeline_stats.json  career_recommendations.json  career_sample_turns.jsonl  career_user_profile.json
outputs/memory/: demo_retrieval.json  demo_summary.txt  extractions.json  graph_memory.json  graph_stats.json  judge_scores_test.json  judge_summary_test.json  memory_evaluation_summary.md  metrics_extraction_test.json  metrics_retrieval.json  noise_robustness.json  noise_robustness_test.json  pipeline_stats.json  sample_turns.jsonl  self_consistency.json  self_consistency_test.json  test_extractions.json
