[project]
name = "memory-engine"
version = "0.1.0"
description = "Personal Knowledge Graph Memory Engine"
requires-python = ">=3.10"
dependencies = [
    # networkx 3.3 — March 2024, no known supply chain issues
    "networkx==3.3",
    # groq 0.9.0 — mid-2024, predates litellm-style incidents; still
    # compatible with llama-3.1-8b-instant endpoint used in the pipeline
    "groq==0.9.0",
    "ijson>=3.3.0",
]

[project.optional-dependencies]
eval = []  # eval scripts are stdlib-only, no extra deps

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_engine"]

[tool.uv]
# Pin to exclude packages released after this date — avoids pulling in
# a newly-poisoned release while still getting security patches within
# the locked versions (groq 0.9.0 / networkx 3.3 baseline).
exclude-newer = "2024-09-01T00:00:00Z"
