[project]
name = "memory-engine"
version = "0.1.0"
description = "Personal Knowledge Graph Memory Engine"
requires-python = ">=3.10"
dependencies = [
    # networkx 3.3 — March 2024, no known supply chain issues
    "networkx==3.3",
    # groq 0.9.0 — mid-2024, predates litellm-style incidents; still
    # compatible with llama-3.1-8b-instant endpoint used in the pipeline
    "groq==0.9.0",
    "ijson>=3.3.0",
    # openai — used by career_judge_llm; exclude-newer caps the version
    "openai>=1.30.0,<2.0.0",
    # sentence-transformers — used for O*NET embedding mapping (career_engine/onet.py)
    # 3.0.x released July 2024, within the exclude-newer window; torch pulled in transitively
    "sentence-transformers>=3.0.0,<4.0.0",
    "fastapi>=0.112.2",
    "uvicorn>=0.30.6",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
eval = []  # eval scripts are stdlib-only, no extra deps

# Web demo: uvicorn + FastAPI server for the interactive UI in demo/
# Versions are capped by [tool.uv] exclude-newer = "2024-09-01" so only
# releases audited before that date can be resolved.
#   fastapi  0.111.x  — May 2024, no known CVEs at time of pin
#   uvicorn  0.29.x   — April 2024, stable async server; [standard] pulls
#                       httptools + uvloop for production-grade performance
#   python-dotenv 1.0.1 — March 2024, stdlib-thin .env loader
demo = [
    "fastapi>=0.111.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["memory_engine"]

[tool.uv]
# Pin to exclude packages released after this date — avoids pulling in
# a newly-poisoned release while still getting security patches within
# the locked versions (groq 0.9.0 / networkx 3.3 baseline).
exclude-newer = "2024-09-01T00:00:00Z"
